// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchPatient deve renderizar corretamente quando há feedbackMessage 1`] = `
<div>
  <div
    class="container"
  >
    <div
      data-testid="patient-form"
    >
      callType: 
      patient
       | onResult: 
      ok
    </div>
    <div
      data-testid="feedback-message"
    >
      Mocked FeedbackMessage: 
      Mensagem de teste
    </div>
  </div>
</div>
`;

exports[`SearchPatient deve renderizar corretamente sem feedbackMessage 1`] = `
<div>
  <div
    class="container"
  >
    <div
      data-testid="patient-form"
    >
      callType: 
      patient
       | onResult: 
      ok
    </div>
  </div>
</div>
`;
